<resources>
    <string name="app_name">Mudra</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textlogin">Log In!</string>
    <string name="buttonsubmit">Submit</string>
    <string name="entername">Enter your name</string>
    <string name="enterid">Enter your email-id</string>
    <string name="title_activity_dusra">dusra</string>
    <string name="exitapp">Exit App</string>
    <string name="level">Choose your level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="start">START GAME!</string>
    <string name="title_activity_splash">splash</string>
    <string name="title_activity_stats">stats</string>
    <string name="title_activity_help">help</string>
    <string name="title_activity_egg">egg</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banstat">ca-app-pub-5342828362899422/7973126599</string>
    <string name="stats">ca-app-pub-5342828362899422/5551370592</string>
    <string name="title_activity_options">options</string>
    <string name="title_activity_choose">choose</string>
    <string name="title_activity_player2">player2</string>
    <string name="choosead">ca-app-pub-5342828362899422/6860516593</string>
    <string name="player2menu">ca-app-pub-5342828362899422/5203496590</string>
    <string name="title_activity_main2">main2</string>
    <string name="title_activity_stats2">stats2</string>
    <string name="title_activity_help2">help2</string>

</resources>
