<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg3"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:text="@string/level"
        android:id="@+id/leveltxt"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:gravity="center_horizontal"
        android:layout_below="@+id/leveltxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
       >

        <RadioButton
            android:id="@+id/easy"
            android:text="@string/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="#ffd5ddff"
            android:focusableInTouchMode="false"
            android:focusable="false"

            />

        <RadioButton
            android:id="@+id/medium"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:buttonTint="#ffd5ddff"
            android:layout_below="@id/easy"
             />

        <RadioButton
            android:id="@+id/difficult"
            android:text="@string/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medium"
            android:checked="false"
            android:buttonTint="#ffd5ddff"
             />

    </RadioGroup>

    </RelativeLayout>






    <Button
        style="@style/btnStyleWhiskey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:onClick="OnSubmit"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/buthelp"
        android:layout_alignStart="@+id/buthelp" />


    <Button
        style="@style/btnStyleWhiskey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  STATISTICS  "
        android:id="@+id/butstat"
        android:onClick="GoStat"
        android:textSize="18dp"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/buthelp"
        android:layout_alignStart="@+id/buthelp"
        android:layout_marginTop="33dp" />



    <Button
        style="@style/btnStyleWhiskey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="        HELP        "
        android:id="@+id/buthelp"
        android:onClick="gohelp"
        android:layout_marginTop="33dp"
        android:textSize="18dp"
        android:layout_below="@+id/butstat"
        android:layout_centerHorizontal="true" />


    <!--
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="       HELP       "
        android:id="@+id/help"
        android:onClick="gohelp"
        android:layout_below="@+id/butstat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textSize="18dp" /> -->


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banstat"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>
